[package]
name = "Practice1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulation"
path = "src/simulation.rs"

[[bin]]
name = "flow_analyzer"
path = "src/flow_analyzer.rs"

[[bin]]
name = "traffic_light"
path = "src/traffic_light.rs"

[[bin]]
name = "system_monitoring"
path = "src/system_monitoring.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
lapin = "2.5.0"
tokio-amqp = "2.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
futures-util = "0.3.31"
rand = "0.9.0"
rand_chacha = "0.9.0"
